# AdaptiFlux

./: .clangd  .gitignore  CMakeLists.txt  README.md
include/: Framebuffer.h  Program.h  VAO.h  app.cuh  renderstate.cuh  utils.cuh  yylvv.cuh
include/renderstates/: arrowglyph.cuh  lineglyph.cuh  streamline.cuh  streamtube.cuh
src/: CMakeLists.txt  Framebuffer.cpp  app.cu  main.cu  yylvv.cu
src/nrrd/: CMakeLists.txt  NRRD.cpp  NRRD.h  PlainText.h
src/renderstates/: arrowglyph.cu  lineglyph.cu  streamline.cu  streamtube.cu
src/shaders/: CMakeLists.txt  arrows.frag  arrows.vert  framebuffer.frag  shadow_floor.vert  simple.frag  simple.vert  streamtube.frag  streamtube.vert
